force-app/main/default/objects/smagicinteract__Notification__mdt/smagicinteract__Notification__mdt.object-meta.xml
<CustomObject>
    <description>How to notify a sender on an incoming message and via which platform.</description>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>