force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Email_Template__c</fullName>
    <description>It will store email template from which email will be sent.</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>