force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Notification_Type__c</fullName>
    <description>It will store notification type
Eg- Email, SMS, Chatter</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Sms</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>