force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__Notify_To__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Notify_To__c</fullName>
    <label>Notify To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Owner</fullName>
                <default>true</default>
                <label>Record Owner</label>
            </value>
            <value>
                <fullName>Conversation Owner</fullName>
            </value>
            <value>
                <fullName>Sender ID Owner</fullName>
            </value>
            <value>
                <fullName>Last Sender</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Specific User(s)</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Specific Email Address/ Chatter User/ Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>