force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__Profile_Info__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Profile_Info__c</fullName>
    <description>It will be used if user stores more than one profile as comma separated values.</description>
    <label>Profile Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>