force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <description>This field will be lookup to &apos;Routing Rule&apos; object</description>
    <label>Routing Rule</label>
    <referenceTo>smagicinteract__Routing_Rule__mdt</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>