force-app/main/default/objects/smagicinteract__Notification__mdt/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <description>It will store sender id from which sms will be sent.</description>
    <label>SMS Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>